@@ -1,6 +1,7 @@
 2008-02-11  Michal Ludvig  <michal@logix.cz>
 
 	* S3/S3.py: Properly follow RedirectPermanent responses for EU buckets
+	* S3/S3.py: Create public buckets with -P (#1837328)
 	* S3/S3.py, s3cmd: Correctly display public URL on uploads.
 	* S3/S3.py, S3/Config.py: Support for MIME types. Both 
 	default and guessing. Fixes bug #1872192 (Thanks Martin Herr)
